overflow fix

--- a/caf/css/caf.css
+++ b/caf/css/caf.css
@@ -4,7 +4,12 @@ body{
     overflow: hidden;
 }
 .app_container{
-
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    overflow: hidden;
 }
 *:not(input):not(textarea) {
     -webkit-user-select: none; /* disable selection/Copy of UIWebView */
